working on photo and project sections

--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
 
                             <div class="grid-sizer"></div>
 
-                            <article class="brick brick--double entry">
+                            <article class="brick brick--double entry" data-aos="zoom-in-up">
                                 <a href="#modal-01" class="entry__link">
                                     <div class="entry__thumb">
                                         <img src="images/folio/white_turban@2x.jpg" alt="">
@@ -496,8 +496,8 @@
                                     </div>
                                 </a>
                             </article> <!-- entry -->
-
-                            <article class="brick brick--double entry">
+                            <!-- use data-aos-delay= on rows  -->
+                            <article class="brick brick--double entry" data-aos="zoom-in-up">
                                 <a href="#modal-02" class="entry__link">
                                     <div class="entry__thumb">
                                         <img src="images/folio/caffeine_and_tulips@2x.jpg" alt="">
@@ -509,19 +509,19 @@
                                 </a>
                             </article> <!-- entry -->
 
-                            <article class="brick entry">
+                            <article class="brick brick--double entry" data-aos="zoom-in-up">
                                 <a href="#modal-03" class="entry__link">
                                     <div class="entry__thumb">
-                                        <img src="images/folio/grayscale@2x.jpg" alt="">
+                                        <img src="images/Screenshot 2024-06-24 104302.png" alt="">
                                     </div>
                                     <div class="entry__info">
-                                        <div class="entry__cat">Product Design</div>
-                                        <h4 class="entry__title">Grayscale</h4>
+                                        <div class="entry__cat">Frontend Design</div>
+                                        <h4 class="entry__title">White Turban</h4>
                                     </div>
                                 </a>
                             </article> <!-- entry -->
 
-                            <article class="brick entry">
+                            <!-- <article class="brick entry" data-aos="zoom-in-up">
                                 <a href="#modal-04" class="entry__link">
                                     <div class="entry__thumb">
                                         <img src="images/folio/lamp@2x.jpg" alt="">
@@ -531,21 +531,22 @@
                                         <h4 class="entry__title">Lamp</h4>
                                     </div>
                                 </a>
-                            </article> <!-- entry -->
+                            </article> entry -->
 
-                            <article class="brick entry">
-                                <a href="#modal-05" class="entry__link">
+                 
+                            <article class="brick brick--double entry" data-aos="zoom-in-up">
+                                <a href="#modal-04" class="entry__link">
                                     <div class="entry__thumb">
-                                        <img src="images/folio/tropical@2x.jpg" alt="">
+                                        <img src="images/Screenshot 2024-08-02 122532.png" alt="">
                                     </div>
                                     <div class="entry__info">
                                         <div class="entry__cat">Frontend Design</div>
-                                        <h4 class="entry__title">Tropical</h4>
+                                        <h4 class="entry__title">White Turban</h4>
                                     </div>
                                 </a>
-                            </article> <!-- entry -->
+                            </article>  <!-- entry -->
 
-                            <article class="brick entry">
+                            <!-- <article class="brick entry" data-aos="zoom-in-up">
                                 <a href="#modal-06" class="entry__link">
                                     <div class="entry__thumb">
                                         <img src="images/folio/woodcraft@2x.jpg" alt="">
@@ -555,9 +556,9 @@
                                         <h4 class="entry__title">Woodcraft</h4>
                                     </div>
                                 </a>
-                            </article> <!-- entry -->
+                            </article> entry -->
 
-                            <article class="brick brick--double entry">
+                            <!-- <article class="brick brick--double entry" data-aos="zoom-in-up">
                                 <a href="#modal-01" class="entry__link">
                                     <div class="entry__thumb">
                                         <img src="images/Screenshot 2024-09-11 201447.png" alt="">
@@ -568,7 +569,7 @@
                                     </div>
                                 </a>
                             </article>
-                            <article class="brick entry--double entry">
+                            <article class="brick entry--double entry" data-aos="zoom-in-up">
                                 <a href="#modal-06" class="entry__link">
                                     <div class="entry__thumb">
                                         <img src="images/Screenshot 2024-09-11 201447.png" alt="">
@@ -578,7 +579,7 @@
                                         <h4 class="entry__title">Woodcraft</h4>
                                     </div>
                                 </a>
-                            </article> <!-- entry -->
+                            </article> entry -->
                         </div> <!-- end bricks-wrapper -->
                     </div> <!-- end masonry -->
                 </div> <!-- end bricks -->
@@ -591,6 +592,7 @@
                     </div>
                     <div class="column lg-6 stack-on-1100 section-header__secondary" data-aos="fade-up">
                         <p class="desc">
+                            <!-- add something about taking images for the sites -->
                             These are just a few images captured by our photographers.
                         </p>
                     </div>
@@ -602,9 +604,9 @@
                             <div class="grid-sizer"></div>
 
                             <article class="brick brick--double entry">
-                                <a href="#modal-01" class="entry__link">
+                                <a href="#modal-05" class="entry__link">
                                     <div class="entry__thumb">
-                                        <img src="images/folio/white_turban@2x.jpg" alt="">
+                                        <img src="images/nycStreet (1).webp" alt="">
                                     </div>
                                     <div class="entry__info">
                                         <div class="entry__cat">Frontend Design</div>
@@ -614,9 +616,9 @@
                             </article> <!-- entry -->
 
                             <article class="brick brick--double entry">
-                                <a href="#modal-02" class="entry__link">
+                                <a href="#modal-06" class="entry__link">
                                     <div class="entry__thumb">
-                                        <img src="images/folio/caffeine_and_tulips@2x.jpg" alt="">
+                                        <img src="images/redwood.jpg" alt="">
                                     </div>
                                     <div class="entry__info">
                                         <div class="entry__cat">Brand Identity</div>
@@ -626,9 +628,9 @@
                             </article> <!-- entry -->
 
                             <article class="brick entry">
-                                <a href="#modal-03" class="entry__link">
+                                <a href="#modal-07" class="entry__link">
                                     <div class="entry__thumb">
-                                        <img src="images/folio/grayscale@2x.jpg" alt="">
+                                        <img src="images/arches.JPG" alt="">
                                     </div>
                                     <div class="entry__info">
                                         <div class="entry__cat">Product Design</div>
@@ -638,9 +640,9 @@
                             </article> <!-- entry -->
 
                             <article class="brick entry">
-                                <a href="#modal-04" class="entry__link">
+                                <a href="#modal-08" class="entry__link">
                                     <div class="entry__thumb">
-                                        <img src="images/folio/lamp@2x.jpg" alt="">
+                                        <img src="images/cannon.JPG" alt="">
                                     </div>
                                     <div class="entry__info">
                                         <div class="entry__cat">E-Commerce</div>
@@ -650,9 +652,9 @@
                             </article> <!-- entry -->
 
                             <article class="brick entry">
-                                <a href="#modal-05" class="entry__link">
+                                <a href="#modal-09" class="entry__link">
                                     <div class="entry__thumb">
-                                        <img src="images/folio/tropical@2x.jpg" alt="">
+                                        <img src="images/coast.JPG" alt="">
                                     </div>
                                     <div class="entry__info">
                                         <div class="entry__cat">Frontend Design</div>
@@ -662,9 +664,9 @@
                             </article> <!-- entry -->
 
                             <article class="brick entry">
-                                <a href="#modal-06" class="entry__link">
+                                <a href="#modal-10" class="entry__link">
                                     <div class="entry__thumb">
-                                        <img src="images/folio/woodcraft@2x.jpg" alt="">
+                                        <img src="images/devil.JPG" alt="">
                                     </div>
                                     <div class="entry__info">
                                         <div class="entry__cat">E-Commerce</div>
@@ -674,9 +676,9 @@
                             </article> <!-- entry -->
 
                             <article class="brick brick--double entry">
-                                <a href="#modal-01" class="entry__link">
+                                <a href="#modal-11" class="entry__link">
                                     <div class="entry__thumb">
-                                        <img src="images/Screenshot 2024-09-11 201447.png" alt="">
+                                        <img src="images/sunLake.jpg" alt="">
                                     </div>
                                     <div class="entry__info">
                                         <div class="entry__cat">Frontend Design</div>
@@ -684,17 +686,17 @@
                                     </div>
                                 </a>
                             </article>
-                            <article class="brick entry--double entry">
-                                <a href="#modal-06" class="entry__link">
+                            <article class="brick brick--double entry">
+                                <a href="#modal-12" class="entry__link">
                                     <div class="entry__thumb">
-                                        <img src="images/Screenshot 2024-09-11 201447.png" alt="">
+                                        <img src="images/chiMall.jpg" alt="">
                                     </div>
                                     <div class="entry__info">
-                                        <div class="entry__cat">E-Commerce</div>
-                                        <h4 class="entry__title">Woodcraft</h4>
+                                        <div class="entry__cat">Frontend Design</div>
+                                        <h4 class="entry__title">White Turban</h4>
                                     </div>
                                 </a>
-                            </article> <!-- entry -->
+                            </article><!-- entry -->
                         </div> <!-- end bricks-wrapper -->
                     </div> <!-- end masonry -->
                 </div>
@@ -805,7 +807,109 @@
                     </div>
                 </div>
 
+                <div id="modal-07" hidden>
+                    <div class="modal-popup">
+                        <img src="images/folio/gallery/g-turban.jpg" alt="">
 
+                        <div class="modal-popup__desc">
+                            <h5>White Turban</h5>
+                            <p>Odio soluta enim quos sit asperiores rerum rerum repudiandae cum. Vel voluptatem alias
+                                qui assumenda iure et expedita voluptatem. Ratione officiis quae.</p>
+                            <ul class="modal-popup__cat">
+                                <li>UX Research</li>
+                                <li>Frontend Design</li>
+                            </ul>
+                        </div>
+
+                        <a href="https://www.behance.net/" class="modal-popup__details">Project link</a>
+                    </div>
+                </div>
+
+                <div id="modal-08" hidden>
+                    <div class="modal-popup">
+                        <img src="images/folio/gallery/g-turban.jpg" alt="">
+
+                        <div class="modal-popup__desc">
+                            <h5>White Turban</h5>
+                            <p>Odio soluta enim quos sit asperiores rerum rerum repudiandae cum. Vel voluptatem alias
+                                qui assumenda iure et expedita voluptatem. Ratione officiis quae.</p>
+                            <ul class="modal-popup__cat">
+                                <li>UX Research</li>
+                                <li>Frontend Design</li>
+                            </ul>
+                        </div>
+
+                        <a href="https://www.behance.net/" class="modal-popup__details">Project link</a>
+                    </div>
+                </div>
+                <div id="modal-09" hidden>
+                    <div class="modal-popup">
+                        <img src="images/folio/gallery/g-turban.jpg" alt="">
+
+                        <div class="modal-popup__desc">
+                            <h5>White Turban</h5>
+                            <p>Odio soluta enim quos sit asperiores rerum rerum repudiandae cum. Vel voluptatem alias
+                                qui assumenda iure et expedita voluptatem. Ratione officiis quae.</p>
+                            <ul class="modal-popup__cat">
+                                <li>UX Research</li>
+                                <li>Frontend Design</li>
+                            </ul>
+                        </div>
+
+                        <a href="https://www.behance.net/" class="modal-popup__details">Project link</a>
+                    </div>
+                </div>
+                <div id="modal-10" hidden>
+                    <div class="modal-popup">
+                        <img src="images/folio/gallery/g-turban.jpg" alt="">
+
+                        <div class="modal-popup__desc">
+                            <h5>White Turban</h5>
+                            <p>Odio soluta enim quos sit asperiores rerum rerum repudiandae cum. Vel voluptatem alias
+                                qui assumenda iure et expedita voluptatem. Ratione officiis quae.</p>
+                            <ul class="modal-popup__cat">
+                                <li>UX Research</li>
+                                <li>Frontend Design</li>
+                            </ul>
+                        </div>
+
+                        <a href="https://www.behance.net/" class="modal-popup__details">Project link</a>
+                    </div>
+                </div>
+                <div id="modal-11" hidden>
+                    <div class="modal-popup">
+                        <img src="images/folio/gallery/g-turban.jpg" alt="">
+
+                        <div class="modal-popup__desc">
+                            <h5>White Turban</h5>
+                            <p>Odio soluta enim quos sit asperiores rerum rerum repudiandae cum. Vel voluptatem alias
+                                qui assumenda iure et expedita voluptatem. Ratione officiis quae.</p>
+                            <ul class="modal-popup__cat">
+                                <li>UX Research</li>
+                                <li>Frontend Design</li>
+                            </ul>
+                        </div>
+
+                        <a href="https://www.behance.net/" class="modal-popup__details">Project link</a>
+                    </div>
+                </div>
+                <div id="modal-12" hidden>
+                    <div class="modal-popup">
+                        <img src="images/folio/gallery/g-turban.jpg" alt="">
+
+                        <div class="modal-popup__desc">
+                            <h5>White Turban</h5>
+                            <p>Odio soluta enim quos sit asperiores rerum rerum repudiandae cum. Vel voluptatem alias
+                                qui assumenda iure et expedita voluptatem. Ratione officiis quae.</p>
+                            <ul class="modal-popup__cat">
+                                <li>UX Research</li>
+                                <li>Frontend Design</li>
+                            </ul>
+                        </div>
+
+                        <a href="https://www.behance.net/" class="modal-popup__details">Project link</a>
+                    </div>
+                </div>
                 <!-- make this technologies?
                 -------------------------------------------- -->
                 <!-- <div class="s-clients row">
