worked on modal

--- a/index.html
+++ b/index.html
@@ -609,8 +609,8 @@
                                         <img src="images/nycStreet (1).webp" alt="">
                                     </div>
                                     <div class="entry__info">
-                                        <div class="entry__cat">Frontend Design</div>
-                                        <h4 class="entry__title">White Turban</h4>
+                                        <div class="entry__cat">Greenwich Village</div>
+                                        <h4 class="entry__title">New York City</h4>
                                     </div>
                                 </a>
                             </article> <!-- entry -->
@@ -621,8 +621,8 @@
                                         <img src="images/redwood.jpg" alt="">
                                     </div>
                                     <div class="entry__info">
-                                        <div class="entry__cat">Brand Identity</div>
-                                        <h4 class="entry__title">Caffeine & Tulips</h4>
+                                        <div class="entry__cat">Redwood Forest</div>
+                                        <h4 class="entry__title">California</h4>
                                     </div>
                                 </a>
                             </article> <!-- entry -->
@@ -633,8 +633,8 @@
                                         <img src="images/arches.JPG" alt="">
                                     </div>
                                     <div class="entry__info">
-                                        <div class="entry__cat">Product Design</div>
-                                        <h4 class="entry__title">Grayscale</h4>
+                                        <div class="entry__cat">Arches National Park</div>
+                                        <h4 class="entry__title">Utah</h4>
                                     </div>
                                 </a>
                             </article> <!-- entry -->
@@ -645,8 +645,8 @@
                                         <img src="images/cannon.JPG" alt="">
                                     </div>
                                     <div class="entry__info">
-                                        <div class="entry__cat">E-Commerce</div>
-                                        <h4 class="entry__title">Lamp</h4>
+                                        <div class="entry__cat">Cannon Beach</div>
+                                        <h4 class="entry__title">Oregon</h4>
                                     </div>
                                 </a>
                             </article> <!-- entry -->
@@ -657,8 +657,8 @@
                                         <img src="images/coast.JPG" alt="">
                                     </div>
                                     <div class="entry__info">
-                                        <div class="entry__cat">Frontend Design</div>
-                                        <h4 class="entry__title">Tropical</h4>
+                                        <div class="entry__cat">Pacific Coast</div>
+                                        <h4 class="entry__title">Oregon or California</h4>
                                     </div>
                                 </a>
                             </article> <!-- entry -->
@@ -669,8 +669,8 @@
                                         <img src="images/devil.JPG" alt="">
                                     </div>
                                     <div class="entry__info">
-                                        <div class="entry__cat">E-Commerce</div>
-                                        <h4 class="entry__title">Woodcraft</h4>
+                                        <div class="entry__cat">Devils Churn</div>
+                                        <h4 class="entry__title">Oregon</h4>
                                     </div>
                                 </a>
                             </article> <!-- entry -->
@@ -681,8 +681,8 @@
                                         <img src="images/sunLake.jpg" alt="">
                                     </div>
                                     <div class="entry__info">
-                                        <div class="entry__cat">Frontend Design</div>
-                                        <h4 class="entry__title">White Turban</h4>
+                                        <div class="entry__cat">Lake</div>
+                                        <h4 class="entry__title">Colorado</h4>
                                     </div>
                                 </a>
                             </article>
@@ -692,8 +692,8 @@
                                         <img src="images/chiMall.jpg" alt="">
                                     </div>
                                     <div class="entry__info">
-                                        <div class="entry__cat">Frontend Design</div>
-                                        <h4 class="entry__title">White Turban</h4>
+                                        <div class="entry__cat">Westfield World Trade Center</div>
+                                        <h4 class="entry__title">New York City</h4>
                                     </div>
                                 </a>
                             </article><!-- entry -->
@@ -774,7 +774,7 @@
                 <div id="modal-05" hidden>
                     <div class="modal-popup">
 
-                        <img src="images/folio/gallery/g-tropical.jpg" alt="">
+                        <img src="images/nycStreet (1).webp" alt="">
 
                         <div class="modal-popup__desc">
                             <h5>Tropical</h5>
@@ -791,7 +791,7 @@
 
                 <div id="modal-06" hidden>
                     <div class="modal-popup">
-                        <img src="images/folio/gallery/g-woodcraft.jpg" alt="">
+                        <img src="images/redwood.jpg" alt="">
 
                         <div class="modal-popup__desc">
                             <h5>Woodcraft</h5>
@@ -809,7 +809,7 @@
 
                 <div id="modal-07" hidden>
                     <div class="modal-popup">
-                        <img src="images/folio/gallery/g-turban.jpg" alt="">
+                        <img src="images/arches.JPG" alt="">
 
                         <div class="modal-popup__desc">
                             <h5>White Turban</h5>
@@ -827,7 +827,7 @@
 
                 <div id="modal-08" hidden>
                     <div class="modal-popup">
-                        <img src="images/folio/gallery/g-turban.jpg" alt="">
+                        <img src="images/cannon.JPG" alt="">
 
                         <div class="modal-popup__desc">
                             <h5>White Turban</h5>
@@ -844,7 +844,7 @@
                 </div>
                 <div id="modal-09" hidden>
                     <div class="modal-popup">
-                        <img src="images/folio/gallery/g-turban.jpg" alt="">
+                        <img src="images/coast.JPG" alt="">
 
                         <div class="modal-popup__desc">
                             <h5>White Turban</h5>
@@ -861,7 +861,7 @@
                 </div>
                 <div id="modal-10" hidden>
                     <div class="modal-popup">
-                        <img src="images/folio/gallery/g-turban.jpg" alt="">
+                        <img src="images/devil.JPG" alt="">
 
                         <div class="modal-popup__desc">
                             <h5>White Turban</h5>
@@ -878,7 +878,7 @@
                 </div>
                 <div id="modal-11" hidden>
                     <div class="modal-popup">
-                        <img src="images/folio/gallery/g-turban.jpg" alt="">
+                        <img src="images/sunLake.jpg" alt="">
 
                         <div class="modal-popup__desc">
                             <h5>White Turban</h5>
@@ -895,7 +895,7 @@
                 </div>
                 <div id="modal-12" hidden>
                     <div class="modal-popup">
-                        <img src="images/folio/gallery/g-turban.jpg" alt="">
+                        <img src="images/chiMall.jpg" alt="">
 
                         <div class="modal-popup__desc">
                             <h5>White Turban</h5>
