issues with image size, almost done

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
                     <div class="column lg-12 s-intro__content-inner">
                         <!-- the color of this needs to be better -->
-                        <h1 class="s-intro__content-title" style="color: rgb(72, 57, 245);">E TECHNOLOGIES</h1>
+                        <h1 id="etech" class="s-intro__content-title" >E TECHNOLOGIES</h1>
                         <h1 class="s-intro__content-title">
                             <!-- From Concept to Code: <br>
                             Our innovative approach transforms your <br>
@@ -459,7 +459,7 @@
             </section> <!-- end s-services -->
 
 
-            <!-- portfolio I can add a couple photos to this and just show them as work
+            <!-- portfolio I can add a couple photos to this and just show them as work images need to be the same size. 
             ----------------------------------------------- -->
             <section id="folio" class="s-folio target-section">
 
@@ -488,7 +488,7 @@
                             <article class="brick brick--double entry" data-aos="zoom-in-up">
                                 <a href="#modal-01" class="entry__link">
                                     <div class="entry__thumb">
-                                        <img src="images/folio/white_turban@2x.jpg" alt="">
+                                        <img src="images/icons/sports-revolt-high-resolution-logo-white.png" alt="" class="same-size">
                                     </div>
                                     <div class="entry__info">
                                         <div class="entry__cat">Frontend Design</div>
@@ -500,7 +500,7 @@
                             <article class="brick brick--double entry" data-aos="zoom-in-up">
                                 <a href="#modal-02" class="entry__link">
                                     <div class="entry__thumb">
-                                        <img src="images/folio/caffeine_and_tulips@2x.jpg" alt="">
+                                        <img src="images/icons/fullLogo.jpg" alt="" class="same-size">
                                     </div>
                                     <div class="entry__info">
                                         <div class="entry__cat">Brand Identity</div>
@@ -512,7 +512,7 @@
                             <article class="brick brick--double entry" data-aos="zoom-in-up">
                                 <a href="#modal-03" class="entry__link">
                                     <div class="entry__thumb">
-                                        <img src="images/Screenshot 2024-06-24 104302.png" alt="">
+                                        <img src="images/Screenshot 2024-06-24 104302.webp" alt="" class="same-size">
                                     </div>
                                     <div class="entry__info">
                                         <div class="entry__cat">Frontend Design</div>
@@ -520,7 +520,7 @@
                                     </div>
                                 </a>
                             </article> <!-- entry -->
-
+                        
                             <!-- <article class="brick entry" data-aos="zoom-in-up">
                                 <a href="#modal-04" class="entry__link">
                                     <div class="entry__thumb">
@@ -537,7 +537,7 @@
                             <article class="brick brick--double entry" data-aos="zoom-in-up">
                                 <a href="#modal-04" class="entry__link">
                                     <div class="entry__thumb">
-                                        <img src="images/Screenshot 2024-08-02 122532.png" alt="">
+                                        <img src="images/Screenshot 2024-10-16 135626.png" alt="" class="same-size">
                                     </div>
                                     <div class="entry__info">
                                         <div class="entry__cat">Frontend Design</div>
@@ -545,7 +545,7 @@
                                     </div>
                                 </a>
                             </article> <!-- entry -->
-
+                        
                             <!-- <article class="brick entry" data-aos="zoom-in-up">
                                 <a href="#modal-06" class="entry__link">
                                     <div class="entry__thumb">
