--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
                             <article class="brick brick--double entry" data-aos="zoom-in-up">
                                 <a href="#modal-01" class="entry__link">
                                     <div class="entry__thumb">
-                                        <img src="images/icons/sports-revolt-high-resolution-logo-white.png" alt="" class="same-size">
+                                        <img src="images/icons/sports-revolt-high-resolution-logo-white.webp" alt="" class="same-size">
                                     </div>
                                     <div class="entry__info">
                                         <div class="entry__cat">Frontend Design</div>
@@ -500,7 +500,7 @@
                             <article class="brick brick--double entry" data-aos="zoom-in-up">
                                 <a href="#modal-02" class="entry__link">
                                     <div class="entry__thumb">
-                                        <img src="images/icons/fullLogo.jpg" alt="" class="same-size">
+                                        <img src="images/icons/fullLogo.webp" alt="" class="same-size">
                                     </div>
                                     <div class="entry__info">
                                         <div class="entry__cat">Brand Identity</div>
@@ -512,7 +512,7 @@
                             <article class="brick brick--double entry" data-aos="zoom-in-up">
                                 <a href="#modal-03" class="entry__link">
                                     <div class="entry__thumb">
-                                        <img src="images/Screenshot 2024-06-24 104302.webp" alt="" class="same-size">
+                                        <img src="images/portfolioSS.webp" alt="" class="same-size">
                                     </div>
                                     <div class="entry__info">
                                         <div class="entry__cat">Frontend Design</div>
@@ -537,7 +537,7 @@
                             <article class="brick brick--double entry" data-aos="zoom-in-up">
                                 <a href="#modal-04" class="entry__link">
                                     <div class="entry__thumb">
-                                        <img src="images/Screenshot 2024-10-16 135626.png" alt="" class="same-size">
+                                        <img src="images/photoSiteSS.webp" alt="" class="same-size">
                                     </div>
                                     <div class="entry__info">
                                         <div class="entry__cat">Frontend Design</div>
