all done just need to clean up

--- a/terms.html
+++ b/terms.html
@@ -68,7 +68,7 @@
                 <div class="s-header__block">
                     <div class="s-header__logo">
                         <a class="logo" href="index.html" data-aos="fade" data-aos-duration="1000">
-                            <img src="images/icons/ETECHNOLOGIES4.png" alt="Homepage">
+                            <img src="images/icons/ETECHNOLOGIES4 (1).webp" alt="Homepage">
                         </a>
                     </div>
 
@@ -183,10 +183,10 @@
                             Us</a>
                         <a href="https://player.vimeo.com/video/14592941?color=f26522&title=0&byline=0&portrait=0"
                             class="s-intro__content-video-btn"> -->
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 style="fill: rgba(0, 0, 0, 1);transform: msFilter">
                                 <path d="M7 6v12l10-6z"></path>
-                            </svg>
+                            </svg> -->
                         </a>
                     </div>
 
