finished readme and cleaned up

--- a/privacy.html
+++ b/privacy.html
@@ -374,9 +374,9 @@
             <div class="row section-header " >
                 <h3 class="column lg-12 section-header__pretitle text-pretitle">Get In Touch</h3>
                 <div class="column lg-6 stack-on-1100 section-header__primary">
-                    <h2 class="title text-display-1" data-aos="zoom-in-up">
+                    <h2 id="footerText" class="title text-display-1" data-aos="zoom-in-up">
                         <!-- this needs to be changed -->
-                        Feel free to contact us with any questions. <a href="mailto:#0"
+                        Feel free to contact us with any questions. <a href="mailto:owner@etechinnovations.com"
                             title="">owner@etechinnovations.com
                         </a>
                     </h2>
