--- a/terms.html
+++ b/terms.html
@@ -98,7 +98,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="animate__animated animate__bounce" href="">
+                            <a class="animate__animated animate__bounce" href="https://x.com/EtechOwner">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                     style="fill:rgba(0, 0, 0, 1);transform:-ms-filter">
                                     <path
@@ -296,9 +296,9 @@
             <div class="row section-header ">
                 <h3 class="column lg-12 section-header__pretitle text-pretitle">Get In Touch</h3>
                 <div class="column lg-6 stack-on-1100 section-header__primary">
-                    <h2 class="title text-display-1" data-aos="zoom-in-up">
+                    <h2 id="footerText" class="title text-display-1" data-aos="zoom-in-up">
                         <!-- this needs to be changed -->
-                        Feel free to contact us with any questions. <a href="mailto:#0"
+                        Feel free to contact us with any questions. <a href="mailto:owner@etechinnovations.com"
                             title="">owner@etechinnovations.com
                         </a>
                     </h2>
@@ -371,7 +371,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="" data-aos="zoom-in-up" data-aos-delay="500">
+                            <a href="https://x.com/EtechOwner" data-aos="zoom-in-up" data-aos-delay="500">
                                 <svg xmlns="" width="24" height="24" viewBox="0 0 24 24"
                                     style="fill:rgba(0, 0, 0, 1);transform:-ms-filter">
                                     <path
