--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- favicons
     ================================================== -->
     <!-- Favicon -->
-    <link href="images/icons/ETECHNOLOGIES4.webp" rel="icon">
+    <link href="images/icons/ETECHNOLOGIES4 (1).webp" rel="icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 
